'palms up together' emoji not rendered with default font Segoe UI Emoji, e.g. for 'diamond hands' (ππ€²)
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox86 | --- | wontfix |
firefox87 | --- | verified |
firefox88 | --- | verified |
People
(Reporter: aryx, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
54 bytes,
text/html;charset=utf-8
|
Details | |
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Windows 8.1, reproduced with Firefox 86.0, 87.0b3 and Nightly 88.0a1 20210227; works as expected with Firefox 85
Similar to bug 1692498, the 'palms up together' emoji (U+1F932) doesn't get rendered but its placeholder.
Assignee | ||
Comment 1•5 years ago
|
||
I think this is expected: since bug 1686274, we rely on the standard Windows system font for emoji on versions from Win8.1 onwards (when the platform introduced color emoji support). That character isn't supported by the version of the font on Windows 8.1. (Unsurprisingly, as it was added to Unicode in version 10.0, released June 2016. Windows 8.1 was released in 2013.)
If you set gfx.bundled-fonts.activate
to 1 and restart the browser, that will re-activate the Twemoji Mozilla font, which has a larger repertoire than older Segoe UI Emoji versions.
If Microsoft isn't updating Segoe UI Emoji on anything older than 10, is it worth considering that to be the baseline for the "Use the OS provided font" check? That way Firefox can provide the updated repertoire for earlier releases.
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
(In reply to Alex from comment #2)
If Microsoft isn't updating Segoe UI Emoji on anything older than 10, is it worth considering that to be the baseline for the "Use the OS provided font" check? That way Firefox can provide the updated repertoire for earlier releases.
Yes, given that we've had several reports about this, clearly a number of people are noticing the limitations of the Windows font there; I think it's probably worth adjusting the threshold so that we still load Twemoji by default on Win8.1, and only disable it (by default -- users can still re-enable it via about:config) on Win10, where it's reasonable to expect the Segoe UI Emoji font to be more up-to-date.
Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
![]() |
||
Comment 6•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Comment 7•5 years ago
|
||
The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 8•5 years ago
|
||
I think we should actually uplift bug 1695528, which supersedes this by re-enabling the emoji font on all windows versions (not just for 8.1). I'll request the relevant uplift over there.
Comment 9•5 years ago
|
||
Comment on attachment 9205970 [details]
Bug 1695432 - Load the bundled Twemoji Mozilla font by default on Win8.1, as the system's emoji font lacks support for newer emoji characters. r?lsalzman
approved for 87.0b6 as a dependency of bug 1695528
Comment 10•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Reproduced the issue on Firefox 88.0a1 (2021-02-27) under Windows 8.1 by using the testcase from Comment 0.
The issue is fixed on Firefox 87.0b6 and Firefox 88.0a1 (2021-03-05). Tests were performed on macOS 10.15.7, Windows 8.1 and Ubuntu 20.04
Description
•