Bug 1695432 - Load the bundled Twemoji Mozilla font by default on Win8.1, as the system's emoji font lacks support for newer emoji characters. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D106738