gfx/thebes/gfxDWriteFontList.cpp
@@ -1492,10 +1492,11 @@ void gfxDWriteFontList::InitSharedFontListForPlatform() {
   }
 #ifdef MOZ_BUNDLED_FONTS
   // If the bundled-fonts pref is < 0 (auto), we skip the bundled fonts on
-  // Windows 8.1 or later, where Segoe UI Emoji is available.
+  // Windows 10 or later, where Segoe UI Emoji is available and should be
+  // kept reasonably up-to-date by Windows.
   if (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() > 0 ||
       (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() < 0 &&
-       !IsWin8Point1OrLater())) {
+       !IsWin10OrLater())) {
     mBundledFonts = CreateBundledFontsCollection(factory);
   }
 #endif
@@ -1580,10 +1581,11 @@ nsresult gfxDWriteFontList::InitFontListForPlatform() {
   // duplicate names, we have recorded the family as bundled (and therefore
   // available regardless of visibility settings).
   // If the bundled-fonts pref is < 0 (auto), we skip the bundled fonts on
-  // Windows 8.1 or later, where Segoe UI Emoji is available.
+  // Windows 10 or later, where Segoe UI Emoji is available and should be
+  // kept reasonably up-to-date by Windows.
   if (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() > 0 ||
       (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() < 0 &&
-       !IsWin8Point1OrLater())) {
+       !IsWin10OrLater())) {
     mBundledFonts = CreateBundledFontsCollection(factory);
   }
   if (mBundledFonts) {
